# Panon.Windows

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.serena/: project.yml
assets/: app.manifest  panon.rc
docs/: MIGRATION_PLAN.md  MIGRATION_RUST.md  PROJECT_STATUS.md  PanonWindows项目记录.txt
src/: app.rs  main.rs
src/Panon.Windows/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Panon.Windows.csproj  SettingsPage.xaml  SettingsPage.xaml.cs  app.manifest
src/Panon.Windows/Audio/: AudioCaptureService.cs  DecayProcessor.cs  FftProcessor.cs  SpectrumData.cs
src/Panon.Windows/Helpers/: DebugLog.cs  SingleInstance.cs  TaskbarHelper.cs  UiaInterop.cs
src/Panon.Windows/Overlay/: LayeredOverlayWindow.cs
src/Panon.Windows/Properties/: launchSettings.json
src/Panon.Windows/Settings/: AppSettings.cs  SettingsManager.cs  TransparencyChecker.cs
src/Panon.Windows/Shader/: ColorProcessor.cs  SpectrumRenderer.cs
src/Panon.Windows/Tray/: MessageWindow.cs  NativeTrayIcon.cs  TrayIconController.cs
src/audio/: capture.rs  decay.rs  fft.rs  mod.rs  spectrum.rs
src/overlay/: mod.rs  window.rs
src/render/: color.rs  effects.rs  mod.rs  presets.rs  renderer.rs
src/settings/: actions.rs  config.rs  mod.rs  transparency.rs
src/taskbar/: detect.rs  mod.rs  uia.rs
src/tray/: icon.rs  menu.rs  mod.rs
src/ui/: mod.rs  settings_window.rs
ui/: settings.slint
