[package]
name = "panon-windows"
version = "1.0.0"
edition = "2021"
build = "build.rs"
description = "Windows 任务栏音频频谱可视化器（Rust 原生版）"
license = "GPL-3.0"

# 产物名说明：cargo 默认输出 panon-windows.exe（Cargo 不允许包名/二进制名含点号）
# 发布打包时通过 scripts/package.ps1 重命名为 panon.windows.exe，对齐 C# 版命名

[profile.release]
opt-level = "z"       # 体积优先
lto = true            # 链接时优化
codegen-units = 1     # 单一编译单元，最大化优化
strip = true          # 去掉符号
panic = "abort"       # 去掉 unwind 信息

[dependencies]
# Win32 API（微软官方）— WASAPI 音频捕获已 POC 验证可用
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

# 设置窗口 GUI（阶段 7 起使用，提前声明）
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
winit = "0.30"
wgpu = { version = "22", features = ["angle"] }

# JSON 配置
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 配置目录解析
dirs = "5"

# 日志
log = "0.4"
log4rs = "1.3"

# 时间（panic hook 时间戳）
chrono = "0.4"

[build-dependencies]
# 编译时嵌入图标资源
embed-resource = "2.5"
